--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechZone - Your Electronic Superstore</title>
+    <title>Kavetronics - Your Electronic Superstore</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #87CEEB;
             height: 150px;
             text-align: center;
             color: white;
@@ -40,7 +40,7 @@
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #4CAF50;
+            background-color: #87CEEB;
             color: white;
         }
         .hero {
@@ -69,7 +69,7 @@
         }
         .feature-box h3 {
             margin: 10px 0;
-            color: #4CAF50;
+            color: #87CEEB; /* Changed to sky blue */
         }
         .products {
             padding: 20px;
@@ -110,7 +110,7 @@
 <body>
 
 <header>
-    <h1>TechZone</h1>
+    <h1>Kavetronics</h1>
 </header>
 
 <nav>
@@ -173,8 +173,8 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 TechZone. All rights reserved.</p>
+    <p>&copy; 2024 Kavetronics. All rights reserved.</p>
 </footer>
 
 </body>
-</html> 
+</html>
