--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #87CEEB;
+            background-color: #1E90FF;
             height: 150px;
             text-align: center;
             color: white;
@@ -40,7 +40,7 @@
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #87CEEB;
+            background-color: #1E90FF;
             color: white;
         }
         .hero {
@@ -69,7 +69,7 @@
         }
         .feature-box h3 {
             margin: 10px 0;
-            color: #87CEEB; /* Changed to sky blue */
+            color: #1E90FF; /* Changed to darker blue */
         }
         .products {
             padding: 20px;
